# bitts

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  LIMITATIONS.md  MATH.md  README.md  main.py  pyproject.toml
checkpoints/: bitjets_ckpt_10.pth  bitjets_ckpt_100.pth  bitjets_ckpt_110.pth  bitjets_ckpt_120.pth  bitjets_ckpt_130.pth  bitjets_ckpt_140.pth  bitjets_ckpt_150.pth  bitjets_ckpt_160.pth  bitjets_ckpt_170.pth  bitjets_ckpt_180.pth  bitjets_ckpt_20.pth  bitjets_ckpt_30.pth  bitjets_ckpt_40.pth  bitjets_ckpt_50.pth  bitjets_ckpt_60.pth  bitjets_ckpt_70.pth  bitjets_ckpt_80.pth  bitjets_ckpt_90.pth
checkpoints/UNIVERSAL_V1/: do_02500000
docs/: blog.md
scripts/: bootstrap.sh  demo.sh  infer.sh  train.sh
src/: benchmark.py  checkpoint.py  dataset.py  hparams.py  inference.py  layers.py  mas.py  models.py  models_gan.py  packing.py  sample_gen.py  train.py  utils.py  vocoder.py
test/: debug_mps.py  test_adaptor.py  test_data.py  test_full_model.py  test_mps.py
tests/: conftest.py  test_layers.py  test_model.py  test_packing.py  test_smoke.py
